Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -126,6 +126,7 @@ header.bk-header nav .widget.socialicons {
 header.bk-header nav .welcome-text {
     float: left;
     padding: 16px 0px;
+    width: 25%;
 }
 
 header.bk-header nav .welcome-text h1, header.bk-header nav .welcome-text h2, 
@@ -166,7 +167,7 @@ footer.bk-footer {
 .widget.extendednavigation {
   position: relative;
   float: right;
-  max-width: 690px;
+  width: 75%;
 }
 
 .widget.extendednavigation ul {
